# pyproject-toml-format

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml
src/pyproject_toml_format/: __main__.py  _ruff.py  cli.py  walk.py
